--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 00;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container{
+  width: 400px;
+  height: 500px;
+  border: solid;
+  border-radius: 20px;
+  margin: 50px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.container button{
+  border: none;
+  padding:10px;
+  background-color: #333;
+  border-radius: 10px;
+  color: #fff;
+  cursor: pointer;
+}
+.profile{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 30px;
+  text-align: center;
+}
+.profile p{
+  width: 300px;
+  margin: 10px 0;
 }
