--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@
 .container{
   width: 400px;
   height: 500px;
-  border: solid;
+  /* border: solid; */
+  background-color: #FFABAB;
   border-radius: 20px;
   margin: 50px auto;
   display: flex;
@@ -29,8 +30,25 @@
   align-items: center;
   padding: 0 30px;
   text-align: center;
+  border-radius: 20px;
+  width: 220px;
+  background-color: #FCC8D1;
+  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.3);
+  color: #333;
+  padding: 30px 10;
+}
+.profile h3{
+  margin: 10px 0;
 }
 .profile p{
-  width: 300px;
   margin: 10px 0;
+}
+.profile img{
+  border-radius: 20px;
+  margin-top: 10px;
+}
+.time{
+  padding: 15px;
+  background-color: #333;
+  color: #fff;
 }
